results/SpecGenBench/2-shot/log-IsSuffix-2023_11_06_01_55_42.txt
public class IsSuffix {
    //@ requires pat != null && txt != null;
    //@ ensures \result == true <==> pat is a suffix of txt;
    public boolean isSuffix (String pat, String txt) {
        int i = pat.length() - 1;
        //@ maintaining 0 <= i && i < pat.length();
        //@ maintaining (\forall int k; i+1 <= k && k < pat.length(); pat.charAt(k) == txt.charAt(k - pat.length() + txt.length()));
        //@ decreases i;
        while(i >= 0) {
            int j = i - pat.length() + txt.length();
            if(j < 0 || pat.charAt(i) != txt.charAt(j))
                return false;
            i = i - 1;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/IsSuffix.java:3: error: Incorrectly formed or terminated ensures statement near here
    //@ ensures \result == true <==> pat is a suffix of txt;
                                         ^
1 error

